# backend/router/router.go
@@ -45,10 +45,10 @@ func NewRouter() *gin.Engine {
 		rv1.POST("/login/teacher", v1.LoginAsTeacher)
 		// 学生
 		rv1.GET("/student", v1.GetAllStudents)
+		rv1.POST("/student", v1.CreateStudent)
 		rv1.GET("/student/:id", v1.GetStudentByID)
 		rv1.DELETE("/student/:id", v1.DeleteStudentByID)
-		rv1.GET("/student/:id/offered_course ", v1.GetOCsByStu)
-		rv1.POST("/student", v1.CreateStudent)
+		rv1.GET("/student/:id/offered_course", v1.GetOCsByStu)
 
 		rv1.PUT("/student/:student_id/course/:course_id", v1.UpdateSelectionScore)
 		// 课程
